syntax = "proto3";

option go_package = "github.com/tamarakaufler/grpc-char-vs-rune/client/char_vs_rune";

service CharVsRune {
    rpc ToRune(ToRuneRequest) returns (ToRuneResponse);
    rpc ToChar(ToCharRequest) returns (ToCharResponse);
}

message ToRuneRequest {
    string from = 1;
}

message ToRuneResponse {
    repeated uint32 in_runes = 1;
    repeated uint32 in_bytes = 2;
    map<string, uint32> mapped = 3;
    map<string, Bytes> bytes = 4;
}

message Bytes {
    repeated uint32 values = 1;
}

message ToCharRequest {
    repeated uint32 runes = 1;
}

message ToCharResponse {
    string to = 1;
}



